Adds get usdRate in add & update transaction endpoints. Updates add & update transaction req schemas.
