# src/api/routes/portfolio/transactions/req-schemas.ts
@@ -1,15 +1,14 @@
 import { Joi, Segments } from "celebrate";
 import { IPTransactionType } from "../../../../interfaces/IPortfolio";
 
-export interface IAddPTransactionReqBody {
-  notes: string;
+export interface IPTransactionReqBody {
+  notes?: string;
   type: string;
   quantity: string;
-  pricePer: string;
+  pricePer?: string;
   coinId: string;
-  date: string;
-  currencyCode: string;
-  usdRate: string;
+  date?: string;
+  currencyCode?: string;
 }
 
 export interface IDeletePTransactionsQuery {
@@ -19,16 +18,6 @@ export interface IDeletePTransactionsQuery {
 export interface IGetPTransactionsQuery {
   coinId?: string;
   type?: IPTransactionType;
-}
-
-export interface IUpdatePTransactionReqBody {
-  notes?: string;
-  type?: IPTransactionType;
-  quantity?: string;
-  pricePer?: string;
-  date?: string;
-  currencyCode?: string;
-  usdRate?: string;
 }
 
 export const ADD_PORTFOLIO_TRANSACTION = {
@@ -51,12 +40,15 @@ export const ADD_PORTFOLIO_TRANSACTION = {
     date: Joi.date().iso().messages({
       "date.format": "date must be in ISO format"
     }),
-    notes: Joi.string().max(255).messages({
+    notes: Joi.string().allow(null, "").max(255).messages({
       "string.max": "notes cannot be greater than 255 characters"
     }),
-    currencyCode: Joi.string().default("USD").messages({}),
-    usdRate: Joi.number().greater(0).default(1).messages({
-      "number.greater": "usdRate must be greater than 0"
+    currencyCode: Joi.when("type", {
+      is: Joi.valid("buy", "sell"),
+      then: Joi.string().default("USD").messages({}),
+      otherwise: Joi.forbidden().messages({
+        "any.unknown": "currencyCode is not allowed when type is 'transfer_in' or 'transfer_out'"
+      })
     }),
     pricePer: Joi.when("type", {
       is: Joi.valid("buy", "sell"),
@@ -64,7 +56,7 @@ export const ADD_PORTFOLIO_TRANSACTION = {
         "number.greater": "pricePer must be greater than 0",
         "any.required": "pricePer is required when type is 'buy' or 'sell'"
       }),
-      otherwise: Joi.forbidden().default(0).messages({
+      otherwise: Joi.forbidden().messages({
         "any.unknown": "pricePer is not allowed when type is 'transfer_in' or 'transfer_out'"
       })
     })
@@ -106,24 +98,38 @@ export const UPDATE_TRANSACTION_BY_ID = {
     })
   }),
   [Segments.BODY]: Joi.object().keys({
-    notes: Joi.string().max(255).messages({
-      "string.max": "notes cannot be greater than 255 characters"
-    }),
-    type: Joi.string().valid("buy", "sell", "transfer_in", "transfer_out").messages({
+    type: Joi.string().required().valid("buy", "sell", "transfer_in", "transfer_out").messages({
       "any.only": "type must be 'buy' | 'sell' | 'transfer_in' | 'transfer_out'"
     }),
-    quantity: Joi.number().greater(0).messages({
+    quantity: Joi.number().required().greater(0).messages({
+      "any.required": "quantity is required",
       "number.greater": "quantity must be greater than 0"
     }),
-    pricePer: Joi.number().greater(0).messages({
-      "number.greater": "pricePer must be greater than 0"
+    coinId: Joi.string().required().messages({
+      "any.required": "coinId is required"
     }),
     date: Joi.date().iso().messages({
       "date.format": "date must be in ISO format"
     }),
-    currencyCode: Joi.string(),
-    usdRate: Joi.number().greater(0).messages({
-      "number.greater": "usdRate must be greater than 0"
+    notes: Joi.string().allow(null, "").max(255).messages({
+      "string.max": "notes cannot be greater than 255 characters"
+    }),
+    currencyCode: Joi.when("type", {
+      is: Joi.valid("buy", "sell"),
+      then: Joi.string().default("USD").messages({}),
+      otherwise: Joi.string().forbidden().default(null).messages({
+        "any.unknown": "currencyCode is not allowed when type is 'transfer_in' or 'transfer_out'"
+      })
+    }),
+    pricePer: Joi.when("type", {
+      is: Joi.valid("buy", "sell"),
+      then: Joi.number().greater(0).required().messages({
+        "number.greater": "pricePer must be greater than 0",
+        "any.required": "pricePer is required when type is 'buy' or 'sell'"
+      }),
+      otherwise: Joi.number().forbidden().default(null).messages({
+        "any.unknown": "pricePer is not allowed when type is 'transfer_in' or 'transfer_out'"
+      })
     })
   })
 };
